--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create a movie list application in React that retrieves data from a\n  local JSON file and runs in the browser with webpack and Babel, Bootstrap. The application return a list of the highest-grossing movies\n  as of 2019, along with some more details and a poster for every movie.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack-dev-server --mode development --hot",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -17,7 +17,8 @@
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "react": "^16.12.0",
